--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8339,19 +8339,24 @@ blockquote p {
     cursor: pointer; }
     .people-picker .custom-people-picker-card p {
       line-height: 0;
-      text-align: center;
+      text-align: left;
       font-size: 14px;
       color: #43b8ea; }
     .people-picker .custom-people-picker-card p:first-of-type {
-      padding-top: 36px;
       color: #000000;
-      font-weight: bold; }
+      margin-bottom: 0px;
+      text-overflow: ellipsis;
+      width: 188px;
+      white-space: nowrap;
+      overflow: hidden;
+      padding: 36px 10px 10px; }
     .people-picker .custom-people-picker-card .email-container {
       text-overflow: ellipsis;
       width: 188px;
       white-space: nowrap;
       overflow: hidden;
-      padding: 10px; }
+      padding: 10px;
+      font-size: 12px; }
     @media only screen and (min-width: 90.063em) and (max-width: 120em) {
       .people-picker .custom-people-picker-card .email-container {
         width: 100%; } }
@@ -8375,10 +8380,13 @@ blockquote p {
       font-size: 14px;
       color: #43b8ea; }
     .network-container .custom-network-container-card p:first-of-type {
-      padding-top: 36px;
       color: #000000;
-      padding-left: 10px;
-      margin-bottom: 8px; }
+      margin-bottom: 0px;
+      text-overflow: ellipsis;
+      width: 188px;
+      white-space: nowrap;
+      overflow: hidden;
+      padding: 36px 10px 10px; }
     .network-container .custom-network-container-card .email-container {
       text-overflow: ellipsis;
       width: 188px;
@@ -8401,7 +8409,7 @@ blockquote p {
 .select-award-main .custom-card .custom-section {
   text-align: center; }
 .select-award-main .custom-card:hover {
-  border: 2px solid green;
+  border: 1px solid green;
   cursor: pointer; }
 
 .nominate-award-main .custom-card img {
