--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,8 +4,8 @@
 
         <div class="grid-content medium-5 large-3 login-left">
             <div class="grid-block">
-                <div class="grid-container">
-                    <img src="assets/img/Wide-310x150.png" />
+                <div class="small-10 medium-10 large-9 grid-container">
+                    <img src="assets/img/logo_310x103.png"/>
                 </div>
 
             </div>
