--- a/templates/account/myProfile.html
+++ b/templates/account/myProfile.html
@@ -29,7 +29,7 @@
 
     <div class="large-10 small-12 grid-content">
         <a class="small secondary expand button hide-for-medium" zf-toggle="sidebar">Show Components</a>
-        <div ng-class="['ui-animation']" ui-view>
+        <div ui-view class="ui-animation">
 
         </div>
     </div>
