body background color fixed

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8512,4 +8512,4 @@ blockquote p {
   padding: 1rem; }
 
 body {
-  background: url("/assets/img/main-background.jpg"); }
+  background: #12766c url("/assets/img/main-background.jpg"); }
