--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8333,6 +8333,53 @@ blockquote p {
       .compose-signal .signal-bottom .signal-audience a {
         color: white; }
 
+.signal-main {
+  background: #ffffff;
+  padding: 10px;
+  border: 1px solid  #CAC8C8;
+  margin-left: 13px;
+  margin-top: 9px; }
+  .signal-main .signal-content {
+    border-bottom: 1px solid #efe7e7;
+    min-height: 80px;
+    padding-bottom: 25px; }
+  .signal-main .bottom {
+    margin-left: 75px;
+    margin-top: 12px;
+    color: gray; }
+    .signal-main .bottom i {
+      cursor: pointer; }
+    .signal-main .bottom p {
+      font-size: 13px; }
+    .signal-main .bottom p:first-of-type {
+      float: left; }
+    .signal-main .bottom p:nth-child(2) {
+      float: right; }
+    .signal-main .bottom a {
+      float: right; }
+  .signal-main img {
+    float: left;
+    height: 60px;
+    width: 60px; }
+  .signal-main .message {
+    margin-left: 75px;
+    text-align: justify; }
+  .signal-main .signal-header {
+    background-color: #f4ead9;
+    padding: 5px;
+    margin-bottom: 8px; }
+    .signal-main .signal-header span {
+      color: #60a8cd; }
+  .signal-main .userName {
+    color: #60a8cd; }
+  .signal-main .signal-comment {
+    clear: both;
+    margin-top: 18px; }
+    .signal-main .signal-comment img {
+      height: 50px;
+      width: 50px;
+      float: left; }
+
 .people-picker {
   margin-left: 2px !important;
   margin-top: 4px;
@@ -8440,6 +8487,7 @@ blockquote p {
   overflow: auto !important; }
   .content-menu-action-sheet .content-menu-main .content-menu-content {
     width: 114px;
+    height: 158px;
     margin: 0px 18px 18px 0px;
     border: 1px solid #777474;
     background-color: #9e9e9e;
@@ -8471,7 +8519,7 @@ blockquote p {
   color: #ffffff; }
   .footer a {
     float: left;
-    text-transform: uppercase;
+    font-size: 12px;
     color: #ffffff;
     border-right: solid 2px #A89E9E;
     padding: 0 5px 0 5px; }
@@ -8483,7 +8531,8 @@ blockquote p {
     float: right;
     line-height: 0;
     margin-bottom: 0;
-    padding: 6px 0 0 0; }
+    padding: 6px 0 0 0;
+    font-size: 12px; }
 
 .ksw-header {
   padding: 2rem;
