--- a/templates/account/signal.html
+++ b/templates/account/signal.html
@@ -61,6 +61,10 @@
                     </div>
                 </div>
             </div>
+
+            <div class="grid-container margin-top-5" data-ng-if="signals">
+                <a class="button success" data-ng-click="loadMoreSignal()">View More Signals</a>
+            </div>
         </div>
 
     </div>
