--- a/templates/account/signal.html
+++ b/templates/account/signal.html
@@ -23,7 +23,7 @@
 
         </ksw-people-picker>
 
-        <div class="grid-block vertical">
+        <div class="grid-block vertical" style="overflow: hidden">
             <div class="grid-content signal-main" data-ng-repeat="signal in signals">
                 <div class="signal-header" data-ng-if="signal.doc.updateAreaString" data-ksw-update-string-area
                      string="{{signal.doc.updateAreaString}}">
