--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -17,7 +17,8 @@
             </div>
             <div class="grid-block">
                 <div class="small-10 medium-10 large-9 grid-container">
-                    <input placeholder="Password" data-ng-model="user.loginPassword" type="password">
+                    <input placeholder="Password" data-ng-model="user.loginPassword" type="password"
+                           ng-keypress="($event.which === 13)?loginNow():0">
                 </div>
 
             </div>
@@ -45,10 +46,10 @@
 
         <div class="grid-content medium-5 large-3 login-right">
             <div class="grid-block">
-            <div class="small-10 medium-12 large-11 grid-container">
-                <h4 class="headline">New?</h4>
+                <div class="small-10 medium-12 large-11 grid-container">
+                    <h4 class="headline">New?</h4>
+                </div>
             </div>
-        </div>
             <div class="grid-block">
                 <div class="small-10 medium-12 large-11 grid-container">
                     <p class="text">
@@ -62,11 +63,11 @@
             <div class="grid-block">
                 <div class="small-10 medium-12 large-11 grid-container">
                     <p>
-                        <i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a herf="javascript:;" class="sign-up-link">SIGN UP</a>
+                        <i class="fa fa-arrow-circle-o-right fa-icon-warning"></i><a herf="javascript:;"
+                                                                                     class="sign-up-link">SIGN UP</a>
                     </p>
                 </div>
             </div>
-
 
 
         </div>
